SFDCProject/src/objects/Sync_Data__c.object
<CustomObject>
    <description>Object is used to store any additional data elements in a extensible way. This is meant for system and not for user consumption.</description>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>Source record id.</inlineHelpText>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <inlineHelpText>Sobject Name</inlineHelpText>
        <label>Sobject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of these sync attributes. Idea is that, for same record, we could have different attributes for different types.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sync Data</label>
    <nameField>
        <displayFormat>SDT-{000000000}</displayFormat>
        <label>Sync Data#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>